--- a/css/style.css
+++ b/css/style.css
@@ -67,12 +67,12 @@ li {
     background-image: url(../image/section1_cover.png);
     background-repeat: no-repeat;
     background-size: cover;
-   
+
 }
 
 
-.section1_article { 
-    
+.section1_article {
+
     padding: 185px 130px;
 }
 
@@ -89,8 +89,66 @@ li {
 .section1_p {
     color: white;
     font-size: 20px;
-    font-family: Kanit;
+    font-family: 'Kanit', sans-serif;
     font-weight: 400;
     line-height: 28px;
     word-wrap: break-word;
+}
+
+/* section2 */
+
+.section2 {
+    padding: 130px;
+}
+
+.section2_div {
+    display: flex;
+    align-items: center;
+    column-gap: 36px;
+}
+
+.section2_h {
+    color: black;
+    font-size: 30px;
+    font-family: 'Kanit', sans-serif;
+    font-weight: 500;
+    word-wrap: break-word;
+    margin-bottom: 34px;
+
+}
+
+.section2_img {
+    width: calc(1440 / 1440 * 100%);
+    height: 190px;
+    object-fit: cover;
+}
+
+.section2_article_h {
+    color: black;
+    font-size: 24px;
+    font-family: 'Kanit', sans-serif;
+    font-weight: 500;
+    line-height: 24px;
+    word-wrap: break-word;
+    margin: 16px 0 8px 0;
+}
+
+.section2_p {
+    color: black;
+    font-size: 16px;
+    font-family: 'Kanit', sans-serif;
+    font-weight: 400;
+    line-height: 24px;
+    word-wrap: break-word;
+    margin-bottom: 24px;
+}
+
+.article_div {
+    display: flex;
+    align-items: center;
+    column-gap: 11px;
+}
+
+.section2article {
+    border: 3px black solid;
 }
