--- a/css/tablet.css
+++ b/css/tablet.css
@@ -6,14 +6,17 @@
     }
 
 
+    /* section2 */
 
-
+.section2{padding-inline: 67px;}
 
 
 
 }
 
 @media (max-width: 660px) {
+
+    /* header */
     nav {
         display: none;
     }
@@ -25,6 +28,8 @@
 }
 
 @media (max-width:605px) {
+
+    /* section1 */
     .section1_h {
         font-size: 32px;
         line-height: 40px;
@@ -34,4 +39,7 @@
         font-size: 14px;
         line-height: 22px;
     }
+
+    /* section2 */
+    .section2_div{display: flex; flex-direction: column; column-gap: 24px;}
 }
