--- a/css/laptops.css
+++ b/css/laptops.css
@@ -12,3 +12,11 @@
         ;}
         .passport{display: none;}
 }
+
+
+@media (max-width:1220px){
+
+    .section3_div{flex-direction: row; column-gap: 20px;}
+    .section3_main{ display: flex; flex-direction: column; row-gap: 20px
+        ;}
+}
